; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_mtree.c_mtree_cmp_key.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_mtree.c_mtree_cmp_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_rb_node = type { i32 }
%struct.mtree_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive_rb_node*, i8*)* @mtree_cmp_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtree_cmp_key(%struct.archive_rb_node* %0, i8* %1) #0 {
  %3 = alloca %struct.archive_rb_node*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mtree_entry*, align 8
  store %struct.archive_rb_node* %0, %struct.archive_rb_node** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.archive_rb_node*, %struct.archive_rb_node** %3, align 8
  %7 = bitcast %struct.archive_rb_node* %6 to %struct.mtree_entry*
  store %struct.mtree_entry* %7, %struct.mtree_entry** %5, align 8
  %8 = load %struct.mtree_entry*, %struct.mtree_entry** %5, align 8
  %9 = getelementptr inbounds %struct.mtree_entry, %struct.mtree_entry* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @strcmp(i32 %10, i8* %11)
  ret i32 %12
}

declare dso_local i32 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
